# conda-anaconda-tos

./: .gitignore  .pre-commit-config.yaml  README.md  demo.tape  pyproject.toml  renovate.json
.github/: TEST_FAILURE_REPORT_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: pre_commit.yml  tests.yml
anaconda_conda_tos/: __init__.py  api.py  cache.py  exceptions.py  local.py  metadata.py  models.py  path.py  plugin.py  remote.py  tos.py
anaconda_conda_tos/console/: __init__.py  mappers.py  prompt.py  render.py
conda_anaconda_tos/: __init__.py  api.py  exceptions.py  models.py  path.py  plugin.py  remote.py
conda_anaconda_tos/console/: __init__.py  mappers.py  render.py
demos/: conda_tos.tape  interactive_accept.tape  interactive_reject.tape
recipe/: meta.yaml  post-link.bat  post-link.sh  pre-unlink.bat  pre-unlink.sh
tests/: Dockerfile  conftest.py  http_test_server.py  requirements-ci.txt  requirements.txt  test_api.py  test_console.py  test_container.py  test_local.py  test_metadata.py  test_models.py  test_path.py  test_plugin.py  test_remote.py  test_tos.py
tests/console/: test_prompt.py  test_render.py
tests/data/sample_channel/: .gitignore  Makefile
tests/data/sample_channel/noarch/: repodata.json  small-executable-1.0.0-0.conda
tests/data/tos/: tos.txt
