[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools-scm"]

[project]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "conda",
]
description = "Conda subcommand to view, accept, and interact with a channel's Terms of Service (ToS)."
license = {file = "LICENSE"}
name = "anaconda-conda-tos"
requires-python = ">=3.8"
version = "0.1.0"

[project.entry-points.conda]
anaconda-conda-tos = "anaconda_conda_tos.plugin"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",  # ignore type checking imports
]
omit = [
  "tests/*",
]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.coverage.run]
# store relative paths in coverage information
relative_files = true

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  # "--cov=anaconda_conda_tos",  # passed in test runner scripts instead (avoid debugger)
  "--cov-report=term",  # print summary table to screen
  "--cov-report=xml",  # for codecov/codecov-action upload
  "--tb=native",
  "-vv",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"

[tool.setuptools]
packages = ["anaconda_conda_tos"]
